Bug 428282 - Wrong parameter in kitemviews/private/kdirectorycontentscounterworker.cpp
Summary: Wrong parameter in kitemviews/private/kdirectorycontentscounterworker.cpp
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-26 16:25 UTC by Lothar
Modified: 2021-01-03 15:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lothar 2020-10-26 16:25:16 UTC
In KDirectoryContentsCounterWorker::subItemsCount, the first parameter in the call of walkDir is QFile::encodeName(path), but it should be path without any conversion. The call of encodeName(path) is done in walkDir.
Comment 1 Nate Graham 2020-10-26 18:18:06 UTC
Good catch! Would you like to submit a merge request to fix it? You can do so here: https://invent.kde.org/system/dolphin/-/merge_requests/

And here's the documentation: https://community.kde.org/Infrastructure/GitLab
Comment 2 Bug Janitor Service 2020-10-27 15:03:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/87
Comment 3 Lothar 2020-10-27 15:11:43 UTC
(In reply to Nate Graham from comment #1)
> Good catch! Would you like to submit a merge request to fix it? You can do
> so here: https://invent.kde.org/system/dolphin/-/merge_requests/
> 
> And here's the documentation: https://community.kde.org/Infrastructure/GitLab

Done! I hope, I did it correctly, the whole procedure is a little bit awkward.
Comment 4 Justin Zobel 2021-01-03 03:29:38 UTC
Lothar / Nate is this now fixed. The MR was merged.
Comment 5 Nate Graham 2021-01-03 15:17:57 UTC
Yup, thanks for following up.